--- a/app/src/main/res/layout/activity_tint.xml
+++ b/app/src/main/res/layout/activity_tint.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/activity_horizontal_margin">
@@ -46,5 +46,5 @@
             android:text="Tint(Src_Over)"
             app:layout_constraintLeft_toRightOf="@id/tvNoTint"
             app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
